--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
         "jest-enzyme": "^7.1.2",
         "lint-staged": "^7.3.0",
         "mini-css-extract-plugin": "^0.4.0",
-        "node-sass": "^5.0.0",
         "nodemon": "^2.0.2",
         "postcss-loader": "^2.1.4",
         "pre-commit": "^1.2.2",
@@ -145,6 +144,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-select": "^3.1.0",
+        "sass": "^1.35.1",
         "serialize-javascript": "^3.1.0",
         "uuid": "^3.3.2",
         "winston": "^2.4.2",
