--- a/package.json
+++ b/package.json
@@ -46,18 +46,17 @@
         "@babel/core": "^7.1.2",
         "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
         "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-        "@babel/polyfill": "^7.2.5",
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
         "@testing-library/react": "^9.1.4",
-        "@types/enzyme": "^3.10.3",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/enzyme": "^3.10.8",
         "@types/jest": "^24.0.18",
         "@types/react-dom": "^16.8.4",
         "@types/react-router-dom": "^4.3.4",
         "@types/react-select": "^3.0.4",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
         "autoprefixer": "^8.3.0",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^10.0.2",
@@ -65,11 +64,9 @@
         "babel-loader": "^8.0.4",
         "core-js": "^3.2.1",
         "css-loader": "^3.2.0",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.10.0",
+        "enzyme": "3.10.0",
         "enzyme-to-json": "^3.3.5",
-        "eslint": "^7.18.0",
-        "eslint-config-airbnb": "^17.1.1",
+        "eslint": "^7.29.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.11.1",
@@ -116,6 +113,7 @@
         }
     },
     "dependencies": {
+        "@babel/polyfill": "^7.12.1",
         "@types/classnames": "^2.2.9",
         "@types/react": "^16.9.2",
         "@types/react-helmet": "^5.0.15",
@@ -135,8 +133,8 @@
         "multer": "^1.4.2",
         "multer-s3": "^2.7.0",
         "prop-types": "^15.7.2",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-ga": "^2.5.6",
         "react-helmet": "^5.2.1",
         "react-helmet-async": "^1.0.4",
