--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "babel-eslint": "^10.0.2",
         "babel-jest": "^25.2.4",
         "babel-loader": "^8.0.4",
-        "core-js": "^3.2.1",
+        "core-js": "^3.15.2",
         "css-loader": "^3.2.0",
         "enzyme": "3.10.0",
         "enzyme-to-json": "^3.3.5",
@@ -141,6 +141,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-select": "^3.1.0",
+        "regenerator-runtime": "^0.13.7",
         "sass": "^1.35.1",
         "serialize-javascript": "^3.1.0",
         "uuid": "^3.3.2",
