--- a/.drone.yml
+++ b/.drone.yml
@@ -64,7 +64,6 @@ steps:
       tags:
         - build_${DRONE_BUILD_NUMBER}
         - ${DRONE_COMMIT_SHA}
-        - branch-${DRONE_COMMIT_BRANCH/\//_}
         - latest
     environment:
       DOCKER_PASSWORD:
@@ -72,7 +71,8 @@ steps:
       DOCKER_USERNAME: ukhomeofficedigital+hocs_quay_robot
     when:
       branch:
-        - main
+        include:
+          - main
     depends_on:
       - build project
       - test project
