--- a/.drone.yml
+++ b/.drone.yml
@@ -103,7 +103,7 @@ steps:
       - git checkout $${VERSION}
 
   - name: deploy to cs-dev
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     environment:
       ENVIRONMENT: cs-dev
       VERSION: "${DRONE_COMMIT_SHA}"
@@ -121,7 +121,7 @@ steps:
         - push
 
   - name: deploy to wcs-dev
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     environment:
       ENVIRONMENT: wcs-dev
       VERSION: "${DRONE_COMMIT_SHA}"
@@ -181,7 +181,7 @@ steps:
         - release
 
   - name: deploy to cs-qa
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     commands:
       - source version.txt
       - echo $VERSION
@@ -200,7 +200,7 @@ steps:
       - generate & tag build
 
   - name: deploy to wcs-qa
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     commands:
       - source version.txt
       - echo $VERSION
@@ -219,7 +219,7 @@ steps:
       - generate & tag build
 
   - name: deploy to not prod
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     commands:
       - cd kube
       - ./deploy.sh
@@ -238,7 +238,7 @@ steps:
           - "*-prod"
 
   - name: deploy to prod
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
+    image: quay.io/ukhomeofficedigital/kd
     commands:
       - cd kube
       - ./deploy.sh
