--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "engines" : {
-        "node" : ">=16.16.0"
+    "engines": {
+        "node": ">=16.16.0"
     },
     "scripts": {
         "start": "node --max-http-header-size 80000 index.js",
@@ -48,6 +48,7 @@
         "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
         "@babel/preset-env": "^7.18.6",
         "@babel/preset-react": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^9.1.4",
         "@types/jest": "^24.0.18",
         "@types/react-dom": "^18.0.1",
