--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "@testing-library/react": "^9.1.4",
         "@types/jest": "^24.0.18",
         "@types/react-dom": "^18.0.1",
-        "@types/react-router-dom": "^4.3.4",
+        "@types/react-router-dom": "^5.3.3",
         "@types/react-select": "^3.0.4",
         "@typescript-eslint/eslint-plugin": "^4.33.0",
         "@typescript-eslint/parser": "^4.33.0",
@@ -112,6 +112,7 @@
         "csurf": "^1.10.0",
         "express": "^4.17.1",
         "govuk-frontend": "^2.13.0",
+        "history": "^4.10.1",
         "istanbul-reports": "^3.1.5",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.5-lts.1",
