--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "scripts": {
         "start": "node --max-http-header-size 80000 index.js",
+        "prestart-dev": "npm run build-dev",
         "start-dev": "webpack -w --mode development --env NODE_ENV=development & nodemon --max-http-header-size 80000 index.js --env NODE_ENV=development",
         "build-dev": "webpack --mode development --env NODE_ENV=development",
         "build-prod": "webpack --mode production --env NODE_ENV=production",
@@ -116,7 +117,7 @@
         "history": "^4.10.1",
         "istanbul-reports": "^3.1.5",
         "jsonwebtoken": "^9.0.1",
-        "multer": "^1.4.5-lts.1",
+        "multer": "^2.0.2",
         "multer-s3": "^2.10.0",
         "prop-types": "^15.7.2",
         "react": "^18.2.0",
