Update types for yup v1

--- a/.github/workflows/semver-tag-docker.yml
+++ b/.github/workflows/semver-tag-docker.yml
@@ -10,4 +10,5 @@ jobs:
       installCommand: 'ci --production=false --no-optional'
       buildCommand: 'build-prod'
       image: 'quay.io/ukhomeofficedigital/hocs-management-ui'
+      nodeVersion: '24.x'
     secrets: inherit
