Upgrade eslint to v9

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-dev": "webpack --mode development --env NODE_ENV=development",
     "build-prod": "webpack --mode production --env NODE_ENV=production",
     "test": "jest --coverage",
-    "lint-staged": "node_modules/lint-staged/bin/lint-staged.js",
+    "lint-staged": "lint-staged",
     "lint": "eslint ./ --ext js,jsx,ts,tsx",
     "audit": "npm audit",
     "prepare": "husky"
@@ -45,25 +45,26 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/eslint-parser": "^7.28.5",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-object-rest-spread": "^7.28.4",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.28.5",
+    "@stylistic/eslint-plugin": "^5.6.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/jest": "^30.0.0",
     "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^3.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "autoprefixer": "^10.4.23",
-    "babel-eslint": "^10.0.2",
     "babel-jest": "^30.2.0",
     "babel-loader": "^10.0.0",
     "core-js": "^3.26.0",
     "css-loader": "^7.1.2",
-    "eslint": "^7.32.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
@@ -87,12 +88,14 @@
     "webpack-node-externals": "^3.0.0"
   },
   "lint-staged": {
-    "*.js": "node_modules/eslint/bin/eslint.js ./ --ignore-path .gitignore",
-    "*.jsx": "node_modules/eslint/bin/eslint.js ./ --ext .jsx --ignore-path .gitignore",
-    "*.ts": "node_modules/eslint/bin/eslint.js ./ --ext .ts --ignore-path .gitignore",
-    "*.tsx": "node_modules/eslint/bin/eslint.js ./ --ext .tsx --ignore-path .gitignore"
+    "*.js": "eslint ./",
+    "*.jsx": "eslint ./ --ext .jsx",
+    "*.ts": "eslint --ext .ts",
+    "*.tsx": "eslint ./ --ext .tsx"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@types/classnames": "^2.2.9",
     "@types/react": "^18.2.48",
     "@types/react-helmet": "^6.1.5",
@@ -106,6 +109,7 @@
     "cookie-parser": "^1.4.6",
     "csrf-csrf": "^4.0.3",
     "express": "^5.2.1",
+    "globals": "^16.5.0",
     "govuk-frontend": "^4.3.1",
     "history": "^4.10.1",
     "istanbul-reports": "^3.2.0",
